--- a/Proposal/aaai_2019/aaai2019.tex
+++ b/Proposal/aaai_2019/aaai2019.tex
@@ -25,7 +25,7 @@
 
 \raggedbottom %nicer enumerate
 \theoremstyle{definition}
-\newtheorem{defn}{Definition}[section]
+\newtheorem{defn}{Definition}
 %\usepackage{float}
 
 \setlength{\pdfpagewidth}{8.5in}  %Required
